# bevy_template

./: .gitignore  Cargo.toml  LICENSE  README.md  setup
.cargo/: config.fast  config_fast_builds
assets/fonts/: license.txt  tiny.txt
license/: APACHE  MIT
src/: main.rs
